k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-bravo
spec:
  type: ClusterIP
  selector:
    app: app-bravo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
